# lead-scoring

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  config.py  deploy.sh  pyproject.toml  requirements.txt  setup.cfg
.claude/skills/: clean-code  data-quality-auditor  scoring-pipeline  synthetic-data-generator
.cursor/rules/: clean-code.mdc  data-quality-auditor.mdc  scoring-pipeline.mdc  synthetic-data-generator.mdc
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: dq-issue-catalogue.md
docs/adr/: 001-scoring-approach.md  002-time-decay-function.md  003-exclusion-model.md  004-entity-fairness.md
docs/knowledge-base/: 01-discovery-notes.md  02-design-decisions.md  03-lessons-learned.md
lead_scorer/: __init__.py  __main__.py
notebooks/: 01_data_exploration.ipynb  02_pipeline_walkthrough.ipynb
scripts/: generate_data.py  generate_scoring_reference.py
skills/clean-code/: SKILL.md
skills/data-quality-auditor/: SKILL.md
skills/domain-driven-design/: SKILL.md
skills/scoring-pipeline/: SKILL.md
skills/synthetic-data-generator/: SKILL.md
src/app/: main.py
src/cli/: __init__.py  __main__.py
src/pipeline/: __init__.py  base.py  logging_config.py  pipeline.py  run_pipeline.py  scorers.py
src/pipeline/stages/: __init__.py  clean.py  features.py  rank.py  score.py
tests/: conftest.py  test_clean.py  test_features.py  test_integration.py  test_rank.py  test_score.py
