[project]
name = "lead-scoring-poc"
version = "1.0.0"
description = "B2B Lead/Contact Readiness Scoring — prioritization model for BDR teams"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Data Science Team"}]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "faker>=18.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
lead-scorer = "lead_scorer:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lead_scorer*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/pipeline"]

[tool.coverage.report]
show_missing = true
skip_empty = true
